whoami-Nodeport.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami-nodeport-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: whoami
  ports:
  - protocol: TCP
    nodePort: 30123
    port: 8000
    targetPort: 8000
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: whoami-deployment
spec:
  replicas: 6
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - image: ctmagazin/whoami 
        name: whoami-container
        ports:
        - containerPort: 8000
