whoami-nodeport.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami-nodeport-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: whoami-nodeport
  ports:
  - protocol: TCP
    nodePort: 30123
    port: 80
    targetPort: 80
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: whoami-nodeport-deployment
spec:
  replicas: 6
  selector:
    matchLabels:
      app: whoami-nodeport
  template:
    metadata:
      labels:
        app: whoami-nodeport
    spec:
      containers:
      - image: ctmagazin/whoami 
        name: whoami-container
        ports:
        - containerPort: 80
