nginx-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - http:
      paths:
        - path: /nginx
          backend:
            serviceName: nginx-service
            servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-service
spec:
  ports:
  - targetPort: 80
    port: 80
  selector:
    app: nginx-ingress
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: nginx-ingress-deployment
spec:
  replicas: 6
  selector:
    matchLabels:
      app: nginx-ingress
  template:
    metadata:
      labels:
        app: nginx-ingress
    spec:
      containers:
      - image: nginx:1.14.2
        name: nginx-container
        ports:
        - containerPort: 80
